Invite to sign up or log in when anonymous can not edit
When anonymous can not edit and click on "edit" button, we display a message
inviting to sign up or log in (english and french only).

Extension VisualEditor is also updated to not load.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,6 +4,7 @@
 	},
 	"minerva-last-modified-date": "Last edited on $1, at $2",
 	"minerva-watchlist-cta": "Keep track of this page and all changes to it.",
+	"minerva-edit-cta": "Edit this page",
 	"minerva-talk-add-topic": "Add discussion",
 	"mobile-frontend-cookies-required": "Cookies are required to switch view modes. Please enable them and try again.",
 	"mobile-frontend-editor-edit": "Edit",
